--- a/src/components/Navbar/style.module.css
+++ b/src/components/Navbar/style.module.css
@@ -26,7 +26,7 @@
   
   .aboutus {
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 300;
     color: #000000;
     text-decoration: none;
