--- a/src/components/ProcessFlow/FAQ/faq.module.css
+++ b/src/components/ProcessFlow/FAQ/faq.module.css
@@ -1,5 +1,4 @@
 .faqContainer{
-
   padding: 60px 0px;
   display: flex;
   align-items: center;
@@ -43,13 +42,13 @@
   }
   .svgtopWave, .svgbottomWave{
     width: 100%;
-    height:100%;
+    height:50%;
     position: absolute;
+    overflow: hidden;
   }
   
   .topsvg,
   .bottomsvg {
-  
     position: absolute;
     width: 100%;
     height:100%;
